tests/paczka1/fuzzy1/36076644.err
Error in line 4: 5U1 S930 94,0
Error in line 14: SXWXXs2i S930 29,6
Error in line 18: Y5S8 S37+ 14,7
Error in line 9: Y5S8 S993 23,6
Error in line 15: SXWXXs2i S379 22,5
Error in line 29: S627 S379 58,0
Error in line 19: 8avmjg S627 6,5
